force-app/main/default/objects/KT_OCR_FieldMapping__mdt/KT_OCR_FieldMapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps OCR provider response fields to KT Onboarding Salesforce target fields per document type.</description>
    <label>KT OCR Field Mapping</label>
    <pluralLabel>KT OCR Field Mappings</pluralLabel>
</CustomObject>