force-app/main/default/objects/KT_OCR_FieldMapping__mdt/fields/Confidence_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Threshold__c</fullName>
    <defaultValue>0.9</defaultValue>
    <description>Minimum confidence required for this field to be treated as high confidence.</description>
    <label>Confidence Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>