force-app/main/default/objects/KT_OCR_FieldMapping__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Document type this mapping applies to.</description>
    <label>Document Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>