force-app/main/default/objects/KT_OCR_FieldMapping__mdt/fields/Provider_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Provider_Field_Path__c</fullName>
    <description>Provider-specific JSON path or field key to extract.</description>
    <label>Provider Field Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>