force-app/main/default/objects/KT_OCR_FieldMapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>Salesforce field API name to update when HR accepts this extracted value.</description>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>