force-app/main/default/objects/KT_OCR_FieldMapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Salesforce object API name to update when HR accepts this extracted value.</description>
    <label>Target Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>